// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MixinModule does not add datatype annotation to literal property when datatype is ambiguous 1`] = `
import * as rdfine from "@tpluscode/rdfine";
import { createFactory, Factory } from "@tpluscode/rdfine/factory";
import { RdfineEnvironment } from "@tpluscode/rdfine/environment";
import $rdf from "@rdfjs/data-model";
import type * as RDF from "@rdfjs/types";
import { ex } from "./namespace.js";
import type { RdfResourceCore } from "@tpluscode/rdfine/RdfResource";
import type * as Example from "../index.js";

export interface Class<D extends RDF.DatasetCore = RDF.DatasetCore> extends rdfine.RdfResource<D> {
    foo: string | undefined;
}

declare global {
    interface ExampleVocabulary {
        Class: Factory<Example.Class>;
    }
}

export function ClassMixin<Base extends rdfine.Constructor>(Resource: Base): rdfine.Constructor<Class & RdfResourceCore> & Base {
    @rdfine.namespace(ex)
    class ClassClass extends Resource {
        @rdfine.property.literal()
        foo: string | undefined;
    }
    return ClassClass as any
}
ClassMixin.appliesTo = ex.Class
ClassMixin.createFactory = (env: RdfineEnvironment) => createFactory<Class>([ClassMixin], { types: [ex.Class] }, env)

`;

exports[`MixinModule does not try import self when property has range of enclosing class 1`] = `
import * as rdfine from "@tpluscode/rdfine";
import { createFactory, Factory } from "@tpluscode/rdfine/factory";
import { RdfineEnvironment } from "@tpluscode/rdfine/environment";
import $rdf from "@rdfjs/data-model";
import type * as RDF from "@rdfjs/types";
import { ex } from "./namespace.js";
import type { RdfResourceCore } from "@tpluscode/rdfine/RdfResource";
import type * as Example from "../index.js";

export interface Class<D extends RDF.DatasetCore = RDF.DatasetCore> extends rdfine.RdfResource<D> {
    foo: Example.Class<D> | undefined;
}

declare global {
    interface ExampleVocabulary {
        Class: Factory<Example.Class>;
    }
}

export function ClassMixin<Base extends rdfine.Constructor>(Resource: Base): rdfine.Constructor<Class & RdfResourceCore> & Base {
    @rdfine.namespace(ex)
    class ClassClass extends Resource {
        @rdfine.property.resource({ as: [ClassMixin] })
        foo: Example.Class | undefined;
    }
    return ClassClass as any
}
ClassMixin.appliesTo = ex.Class
ClassMixin.createFactory = (env: RdfineEnvironment) => createFactory<Class>([ClassMixin], { types: [ex.Class] }, env)

`;

exports[`MixinModule generates a bundle module with property mixin types but skipping external mixins 1`] = `
import type { Mixin } from "@tpluscode/rdfine/lib/ResourceFactory";
import { ClassMixin } from "../Class.js";
import { FriendMixin } from "../Friend.js";

export const ClassBundle = [
    ClassMixin as Mixin,
    FriendMixin as Mixin];

`;

exports[`MixinModule generates a bundle module with property mixin types but skipping external mixins 2`] = `
export { ClassBundle } from "./Class.js";

`;

exports[`MixinModule generates a bundle module with super classes but without externals 1`] = `
import type { Mixin } from "@tpluscode/rdfine/lib/ResourceFactory";
import { ClassMixin } from "../Class.js";
import { SuperMixin } from "../Example.js";

export const ClassBundle = [
    ClassMixin as Mixin,
    SuperMixin as Mixin];

`;

exports[`MixinModule generates a bundle module with super classes but without externals 2`] = `
export { ClassBundle } from "./Class.js";

`;

exports[`MixinModule generates a mixin class where term is not safe identifier 1`] = `
import * as rdfine from "@tpluscode/rdfine";
import { createFactory, Factory } from "@tpluscode/rdfine/factory";
import { RdfineEnvironment } from "@tpluscode/rdfine/environment";
import $rdf from "@rdfjs/data-model";
import type * as RDF from "@rdfjs/types";
import { ex } from "./namespace.js";
import type { RdfResourceCore } from "@tpluscode/rdfine/RdfResource";
import type * as Example from "../index.js";

export interface _3Class<D extends RDF.DatasetCore = RDF.DatasetCore> extends rdfine.RdfResource<D> {
}

declare global {
    interface ExampleVocabulary {
        _3Class: Factory<Example._3Class>;
    }
}

export function _3ClassMixin<Base extends rdfine.Constructor>(Resource: Base): rdfine.Constructor<_3Class & RdfResourceCore> & Base {
    @rdfine.namespace(ex)
    class _3ClassClass extends Resource {
    }
    return _3ClassClass as any
}
_3ClassMixin.appliesTo = ex['3Class']
_3ClassMixin.createFactory = (env: RdfineEnvironment) => createFactory<_3Class>([_3ClassMixin], { types: [ex['3Class']] }, env)

`;

exports[`MixinModule generates a mixin class with external super classes 1`] = `
import * as rdfine from "@tpluscode/rdfine";
import { createFactory, Factory } from "@tpluscode/rdfine/factory";
import { RdfineEnvironment } from "@tpluscode/rdfine/environment";
import $rdf from "@rdfjs/data-model";
import type * as RDF from "@rdfjs/types";
import { ex } from "./namespace.js";
import type { RdfResourceCore } from "@tpluscode/rdfine/RdfResource";
import type * as Example from "../index.js";
import type * as Schema from "@rdfine/schema";
import { Person as PersonMixin } from "@rdfine/schema/Person";

export interface Class<D extends RDF.DatasetCore = RDF.DatasetCore> extends Schema.Person<D>, rdfine.RdfResource<D> {
}

declare global {
    interface ExampleVocabulary {
        Class: Factory<Example.Class>;
    }
}

export function ClassMixin<Base extends rdfine.Constructor>(Resource: Base): rdfine.Constructor<Class & RdfResourceCore> & Base {
    @rdfine.namespace(ex)
    class ClassClass extends PersonMixin(Resource) {
    }
    return ClassClass as any
}
ClassMixin.appliesTo = ex.Class
ClassMixin.createFactory = (env: RdfineEnvironment) => createFactory<Class>([PersonMixin, ClassMixin], { types: [ex.Class] }, env)

`;

exports[`MixinModule generates a mixin class without props 1`] = `
import * as rdfine from "@tpluscode/rdfine";
import { createFactory, Factory } from "@tpluscode/rdfine/factory";
import { RdfineEnvironment } from "@tpluscode/rdfine/environment";
import $rdf from "@rdfjs/data-model";
import type * as RDF from "@rdfjs/types";
import { ex } from "./namespace.js";
import type { RdfResourceCore } from "@tpluscode/rdfine/RdfResource";
import type * as Example from "../index.js";

export interface Class<D extends RDF.DatasetCore = RDF.DatasetCore> extends rdfine.RdfResource<D> {
}

declare global {
    interface ExampleVocabulary {
        Class: Factory<Example.Class>;
    }
}

export function ClassMixin<Base extends rdfine.Constructor>(Resource: Base): rdfine.Constructor<Class & RdfResourceCore> & Base {
    @rdfine.namespace(ex)
    class ClassClass extends Resource {
    }
    return ClassClass as any
}
ClassMixin.appliesTo = ex.Class
ClassMixin.createFactory = (env: RdfineEnvironment) => createFactory<Class>([ClassMixin], { types: [ex.Class] }, env)

`;

exports[`MixinModule generates array property 1`] = `
import * as rdfine from "@tpluscode/rdfine";
import { createFactory, Factory } from "@tpluscode/rdfine/factory";
import { RdfineEnvironment } from "@tpluscode/rdfine/environment";
import $rdf from "@rdfjs/data-model";
import type * as RDF from "@rdfjs/types";
import { ex } from "./namespace.js";
import type { RdfResourceCore } from "@tpluscode/rdfine/RdfResource";
import type * as Example from "../index.js";

export interface Class<D extends RDF.DatasetCore = RDF.DatasetCore> extends rdfine.RdfResource<D> {
    foo: Array<Example.Foo<D>>;
}

declare global {
    interface ExampleVocabulary {
        Class: Factory<Example.Class>;
    }
}

export function ClassMixin<Base extends rdfine.Constructor>(Resource: Base): rdfine.Constructor<Class & RdfResourceCore> & Base {
    @rdfine.namespace(ex)
    class ClassClass extends Resource {
        @rdfine.property.resource({ values: 'array' })
        foo!: Array<Example.Foo>;
    }
    return ClassClass as any
}
ClassMixin.appliesTo = ex.Class
ClassMixin.createFactory = (env: RdfineEnvironment) => createFactory<Class>([ClassMixin], { types: [ex.Class] }, env)

`;

exports[`MixinModule generates date property 1`] = `
import * as rdfine from "@tpluscode/rdfine";
import { createFactory, Factory } from "@tpluscode/rdfine/factory";
import { RdfineEnvironment } from "@tpluscode/rdfine/environment";
import $rdf from "@rdfjs/data-model";
import type * as RDF from "@rdfjs/types";
import { ex } from "./namespace.js";
import type { RdfResourceCore } from "@tpluscode/rdfine/RdfResource";
import type * as Example from "../index.js";

export interface Class<D extends RDF.DatasetCore = RDF.DatasetCore> extends rdfine.RdfResource<D> {
    foo: Date | undefined;
}

declare global {
    interface ExampleVocabulary {
        Class: Factory<Example.Class>;
    }
}

export function ClassMixin<Base extends rdfine.Constructor>(Resource: Base): rdfine.Constructor<Class & RdfResourceCore> & Base {
    @rdfine.namespace(ex)
    class ClassClass extends Resource {
        @rdfine.property.literal({ type: Date, datatype: $rdf.namedNode('http://www.w3.org/2001/XMLSchema#date') })
        foo: Date | undefined;
    }
    return ClassClass as any
}
ClassMixin.appliesTo = ex.Class
ClassMixin.createFactory = (env: RdfineEnvironment) => createFactory<Class>([ClassMixin], { types: [ex.Class] }, env)

`;

exports[`MixinModule generates list property 1`] = `
import * as rdfine from "@tpluscode/rdfine";
import { createFactory, Factory } from "@tpluscode/rdfine/factory";
import { RdfineEnvironment } from "@tpluscode/rdfine/environment";
import $rdf from "@rdfjs/data-model";
import type * as RDF from "@rdfjs/types";
import { ex } from "./namespace.js";
import type { RdfResourceCore } from "@tpluscode/rdfine/RdfResource";
import type * as Example from "../index.js";

export interface Class<D extends RDF.DatasetCore = RDF.DatasetCore> extends rdfine.RdfResource<D> {
    foo: Array<Example.Foo<D>>;
}

declare global {
    interface ExampleVocabulary {
        Class: Factory<Example.Class>;
    }
}

export function ClassMixin<Base extends rdfine.Constructor>(Resource: Base): rdfine.Constructor<Class & RdfResourceCore> & Base {
    @rdfine.namespace(ex)
    class ClassClass extends Resource {
        @rdfine.property.resource({ values: 'list' })
        foo!: Array<Example.Foo>;
    }
    return ClassClass as any
}
ClassMixin.appliesTo = ex.Class
ClassMixin.createFactory = (env: RdfineEnvironment) => createFactory<Class>([ClassMixin], { types: [ex.Class] }, env)

`;

exports[`MixinModule generates list/single property 1`] = `
import * as rdfine from "@tpluscode/rdfine";
import { createFactory, Factory } from "@tpluscode/rdfine/factory";
import { RdfineEnvironment } from "@tpluscode/rdfine/environment";
import $rdf from "@rdfjs/data-model";
import type * as RDF from "@rdfjs/types";
import { ex } from "./namespace.js";
import type { RdfResourceCore } from "@tpluscode/rdfine/RdfResource";
import type * as Example from "../index.js";

export interface Class<D extends RDF.DatasetCore = RDF.DatasetCore> extends rdfine.RdfResource<D> {
    foo: Example.Foo<D> | Array<Example.Foo<D>> | undefined;
}

declare global {
    interface ExampleVocabulary {
        Class: Factory<Example.Class>;
    }
}

export function ClassMixin<Base extends rdfine.Constructor>(Resource: Base): rdfine.Constructor<Class & RdfResourceCore> & Base {
    @rdfine.namespace(ex)
    class ClassClass extends Resource {
        @rdfine.property.resource({ values: ['list', 'single'] })
        foo: Example.Foo | Array<Example.Foo> | undefined;
    }
    return ClassClass as any
}
ClassMixin.appliesTo = ex.Class
ClassMixin.createFactory = (env: RdfineEnvironment) => createFactory<Class>([ClassMixin], { types: [ex.Class] }, env)

`;

exports[`MixinModule generates literal property with unioned string return types 1`] = `
import * as rdfine from "@tpluscode/rdfine";
import { createFactory, Factory } from "@tpluscode/rdfine/factory";
import { RdfineEnvironment } from "@tpluscode/rdfine/environment";
import $rdf from "@rdfjs/data-model";
import type * as RDF from "@rdfjs/types";
import { ex } from "./namespace.js";
import type { RdfResourceCore } from "@tpluscode/rdfine/RdfResource";
import type * as Example from "../index.js";

export interface Class<D extends RDF.DatasetCore = RDF.DatasetCore> extends rdfine.RdfResource<D> {
    foo: 'bar' | 'baz' | 'foo' | undefined;
}

declare global {
    interface ExampleVocabulary {
        Class: Factory<Example.Class>;
    }
}

export function ClassMixin<Base extends rdfine.Constructor>(Resource: Base): rdfine.Constructor<Class & RdfResourceCore> & Base {
    @rdfine.namespace(ex)
    class ClassClass extends Resource {
        @rdfine.property.literal()
        foo: 'bar' | 'baz' | 'foo' | undefined;
    }
    return ClassClass as any
}
ClassMixin.appliesTo = ex.Class
ClassMixin.createFactory = (env: RdfineEnvironment) => createFactory<Class>([ClassMixin], { types: [ex.Class] }, env)

`;

exports[`MixinModule generates property with automatic external type cast when predicate has strict semantics 1`] = `
import * as rdfine from "@tpluscode/rdfine";
import { createFactory, Factory } from "@tpluscode/rdfine/factory";
import { RdfineEnvironment } from "@tpluscode/rdfine/environment";
import $rdf from "@rdfjs/data-model";
import type * as RDF from "@rdfjs/types";
import { ex } from "./namespace.js";
import type { RdfResourceCore } from "@tpluscode/rdfine/RdfResource";
import type * as Example from "../index.js";
import type * as Example from "@rdfine/example";
import { Foo as FooMixin } from "@rdfine/example/Foo";

export interface Class<D extends RDF.DatasetCore = RDF.DatasetCore> extends rdfine.RdfResource<D> {
    foo: Example.Foo<D> | undefined;
}

declare global {
    interface ExampleVocabulary {
        Class: Factory<Example.Class>;
    }
}

export function ClassMixin<Base extends rdfine.Constructor>(Resource: Base): rdfine.Constructor<Class & RdfResourceCore> & Base {
    @rdfine.namespace(ex)
    class ClassClass extends Resource {
        @rdfine.property.resource({ as: [FooMixin] })
        foo: Example.Foo | undefined;
    }
    return ClassClass as any
}
ClassMixin.appliesTo = ex.Class
ClassMixin.createFactory = (env: RdfineEnvironment) => createFactory<Class>([ClassMixin], { types: [ex.Class] }, env)

`;

exports[`MixinModule generates property with automatic type cast when predicate has strict semantics 1`] = `
import * as rdfine from "@tpluscode/rdfine";
import { createFactory, Factory } from "@tpluscode/rdfine/factory";
import { RdfineEnvironment } from "@tpluscode/rdfine/environment";
import $rdf from "@rdfjs/data-model";
import type * as RDF from "@rdfjs/types";
import { ex } from "./namespace.js";
import type { RdfResourceCore } from "@tpluscode/rdfine/RdfResource";
import type * as Example from "../index.js";

export interface Class<D extends RDF.DatasetCore = RDF.DatasetCore> extends rdfine.RdfResource<D> {
    foo: Example.Foo<D> | undefined;
}

declare global {
    interface ExampleVocabulary {
        Class: Factory<Example.Class>;
    }
}

export function ClassMixin<Base extends rdfine.Constructor>(Resource: Base): rdfine.Constructor<Class & RdfResourceCore> & Base {
    @rdfine.namespace(ex)
    class ClassClass extends Resource {
        @rdfine.property.resource({ implicitTypes: [ex.Foo] })
        foo: Example.Foo | undefined;
    }
    return ClassClass as any
}
ClassMixin.appliesTo = ex.Class
ClassMixin.createFactory = (env: RdfineEnvironment) => createFactory<Class>([ClassMixin], { types: [ex.Class] }, env)

`;

exports[`MixinModule generates property with datatype-annotated literal 1`] = `
import * as rdfine from "@tpluscode/rdfine";
import { createFactory, Factory } from "@tpluscode/rdfine/factory";
import { RdfineEnvironment } from "@tpluscode/rdfine/environment";
import $rdf from "@rdfjs/data-model";
import type * as RDF from "@rdfjs/types";
import { ex } from "./namespace.js";
import type { RdfResourceCore } from "@tpluscode/rdfine/RdfResource";
import type * as Example from "../index.js";

export interface Class<D extends RDF.DatasetCore = RDF.DatasetCore> extends rdfine.RdfResource<D> {
    foo: string | undefined;
}

declare global {
    interface ExampleVocabulary {
        Class: Factory<Example.Class>;
    }
}

export function ClassMixin<Base extends rdfine.Constructor>(Resource: Base): rdfine.Constructor<Class & RdfResourceCore> & Base {
    @rdfine.namespace(ex)
    class ClassClass extends Resource {
        @rdfine.property.literal({ datatype: $rdf.namedNode('http://www.w3.org/2001/XMLSchema#anyURI') })
        foo: string | undefined;
    }
    return ClassClass as any
}
ClassMixin.appliesTo = ex.Class
ClassMixin.createFactory = (env: RdfineEnvironment) => createFactory<Class>([ClassMixin], { types: [ex.Class] }, env)

`;

exports[`MixinModule wraps property name in quotes when term has non-alpha characters 1`] = `
import * as rdfine from "@tpluscode/rdfine";
import { createFactory, Factory } from "@tpluscode/rdfine/factory";
import { RdfineEnvironment } from "@tpluscode/rdfine/environment";
import $rdf from "@rdfjs/data-model";
import type * as RDF from "@rdfjs/types";
import { ex } from "./namespace.js";
import type { RdfResourceCore } from "@tpluscode/rdfine/RdfResource";
import type * as Example from "../index.js";

export interface Class<D extends RDF.DatasetCore = RDF.DatasetCore> extends rdfine.RdfResource<D> {
    'foo-bar': string | undefined;
}

declare global {
    interface ExampleVocabulary {
        Class: Factory<Example.Class>;
    }
}

export function ClassMixin<Base extends rdfine.Constructor>(Resource: Base): rdfine.Constructor<Class & RdfResourceCore> & Base {
    @rdfine.namespace(ex)
    class ClassClass extends Resource {
        @rdfine.property.literal()
        'foo-bar': string | undefined;
    }
    return ClassClass as any
}
ClassMixin.appliesTo = ex.Class
ClassMixin.createFactory = (env: RdfineEnvironment) => createFactory<Class>([ClassMixin], { types: [ex.Class] }, env)

`;
